--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
+    <head>
+        <script type="text/javascript" src="script.js"></script>
+        <meta charset="UTF-8">
         <title>Messenger</title>
-	</head>
-	<body>
-		<!--	WEBSITE BODY	-->
-	</body>
+        <link href="styles.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <form method="post">
+            <fieldset>
+                <legend>Send a message:</legend>
+                <label for="username">Target username:<input type="text" id="username" required/></label>
+                <label for="message">Message:<input type="text" id="message" required/></label>
+                <button type="button" onclick="send()">Send message</button>
+            </fieldset>
+        </form>
+        <form method="get">
+            <fieldset>
+                <legend>My inbox:</legend>
+                <label for="myUsername">Username:<input type="text" id="myUsername" required/></label>
+                <label for="password">Password:<input type="password" id="password" required/></label>
+                <button type="button" onclick="getMessages()">Show messages</button>
+                <div id="myMessageList"></div>
+                <label>Haven't registered yet? <a href="http://localhost:8989/messenger/register.html">Register now</a></label>
+            </fieldset>
+        </form>
+    </body>
 </html>
